--- a/ubuntu/python/Dockerfile
+++ b/ubuntu/python/Dockerfile
@@ -8,14 +8,16 @@ the default python along with some python tools"
 # Install the core python
 RUN apt-get update && apt-get install -y --no-install-recommends \
         python \
-        python-setuptools \
-        python-dev \
         python-pip \
-        python-dbg \
-        python-virtualenv \
+        python-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # ----------------------------------------------
-# Install primary python development tools
-RUN pip install pep8==1.6.2 pylint==1.4.4
+# Install virtualenv and primary python development tools
+RUN pip install virtualenv
+
+RUN virtualenv /python-virtual
+
+RUN . /python-virtual/bin/activate \
+    && pip install pep8==1.6.2 pylint==1.4.4
 
